app id and styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   </head>
   <body>
-    <div class="app">HTML</div>
+    <div id="app">HTML</div>
 
     <script src="/build/app.js"></script>
   </body>
